--- a/style.css
+++ b/style.css
@@ -215,6 +215,8 @@ h3{
     bottom: 49%;
     opacity: 1;
 }
+
+/*--------- facilities ------*/
 .facilities{
      width: 80%;
     margin: auto;
@@ -327,6 +329,65 @@ facilities-col h3{
     color: #f44336; 
     
 }
+
+/*------ About Us Page------*/
+
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/background.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1{
+    margin-top: 100px;
+}
+.about-us{
+    width:80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about-col img{
+    width: 100%;
+}
+.about-col h1{
+    padding-top: 0;
+}
+.about-col p{
+    padding: 15px 0 25px;
+}
+.red-btn{
+    border: 1px solid #f44336;
+    background: transparent;
+    color: #f44336;
+}
+.red-btn:hover{
+    color: #fff;
+}
+
+/*-------blog------*/
+
+.blog-content{
+    width: 80%;
+    margin:auto;
+    padding: 60px,0;
+}
+.blog-left{
+    flex-basis: 65%;
+}
+.blog-left img{
+   width: 100%; 
+}
+.blog-left h2{
+    color:#222;
+    font-weight: 600;
+    margin: 30px,0;
+}
+
 
 
 
